<resources>
    <string name="app_name">Travel Mate</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_logged">You are already logged in</string>
    <string name="can_not_be_empty">This field can not be empty!</string>
    <string name="error">Error!</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait...</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="enter_name">Enter your name</string>
    <string name="cancel">Cancel</string>
    <string name="reg_success">Registration completed successflly</string>
    <string name="login_success">Logged in successfully!</string>
    <string name="you_are_now_logged">You are now logged in</string>
    <string name="error_occured">An error occurred!</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="default_date">Default date</string>
    <string name="update_profile">Update profile</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="logout">Logout</string>
    <string name="logout_success">You have been logged out!</string>
    <string name="could_not_set_name">Could not set name</string>
    <string name="reg_success_setting_name">Creating profile...</string>
    <string name="events">Events</string>
    <string name="event_name">Event Name</string>
    <string name="all_events">All Events</string>
    <string name="weather">Weather</string>
    <string name="location">Location</string>
    <string name="nearby">Nearby Places</string>
    <string name="map">Map</string>
    <string name="expense_title">Expense Title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registering">Registering...</string>
    <string name="uid">UID</string>
    <string name="uid_c">UID:</string>
    <string name="name_c">Name:</string>
    <string name="email_c">Email:</string>
    <string name="phone_c">Phone:</string>
    <string name="enter_phone">Enter phone no</string>
    <string name="update">Update</string>
    <string name="updating_name">Updating name...</string>
    <string name="name_updated">Name updated successfully</string>
    <string name="could_not_update_name">Could not update name</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="exit">Exit</string>
    <string name="exit_logout">Exit and logout</string>
    <string name="change_email_address">Change email address</string>
    <string name="change_password">Change password</string>
    <string name="enter_password">Enter password</string>
    <string name="new_prev_mail_same">Current email is same.</string>
    <string name="changed_successfully">Changed successfully</string>
    <string name="current_email">Current email address</string>
    <string name="current_phone">Current phone number</string>
    <string name="enter_new_email">Enter new email address</string>
    <string name="enter_new_phone">Enter new phone number</string>
    <string name="new_email">New email address</string>
    <string name="email_already_chosen">This email is already in use.</string>
    <string name="current_pass">Current password</string>
    <string name="enter_current_pass">Enter current password</string>
    <string name="new_pass">New password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="conf_new_password">Confirm new password</string>
    <string name="new_passes_not_match">New password and confirm new password did not matched</string>
    <string name="home">Home</string>
    <string name="created_on">Created On</string>
    <string name="created_on_c">Created on:</string>
    <string name="starts_on_c">Starts on:</string>
    <string name="starts_on">Starts on</string>
    <string name="days_left">Days left</string>
    <string name="running">Running</string>
    <string name="finished">Finished</string>
    <string name="day">day</string>
    <string name="remaining">remaining</string>
    <string name="left">left</string>
    <string name="days">days</string>
    <string name="plus">+</string>
    <string name="no_event_created">No event is created</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="create_now">Create now</string>
    <string name="create">Create</string>
    <string name="created_events">Created Events</string>
    <string name="enter_budget">Enter budget</string>
    <string name="budget_c">Total budget:</string>
    <string name="please_select">Please select</string>
    <string name="departure_date_c">Departure date:</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="enter_start_location">Enter starting location</string>
    <string name="enter_destination">Enter destination</string>
    <string name="new_event">New event</string>
    <string name="select_date">You need to select departure date</string>
    <string name="cant_prev_date">You can not create an expired event</string>
    <string name="creating">Creating...</string>
    <string name="invalid_budget">Invalid budget amount!</string>
    <string name="session_expired">Session expired!</string>
    <string name="created_successfully">Event created successfully</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="edit">Edit</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete">Delete</string>
    <string name="delete_event">Delete Event</string>
    <string name="confirm_delete_event">Are you sure to delete this event?</string>
    <string name="event_deleted">Event deleted!</string>
    <string name="budget_status">Budget Status</string>
    <string name="event_not_found">Event not found!</string>
    <string name="can_not_edit_expired_event">Can not edit an expired event</string>
    <string name="edited_successfully">Edited successfully</string>
    <string name="expense">Expense</string>
    <string name="close">Close</string>
    <string name="expenses">Expenses</string>
    <string name="time">Time</string>
    <string name="expenditure">Expenditure</string>
    <string name="moments">Moments</string>
    <string name="more_on_event">More on Event</string>

    <string name="new_string">New String</string>
    <string name="current">Current</string>
    <string name="forecast">Forecast</string>
    <string name="recent_days">Hourly Forecast</string>
    <string name="test">Test</string>
    <string name="degree">°</string>
    <string name="celsius">C</string>
    <string name="fahrenheit">F</string>


    <string name="default_text">17.0°C</string>
    <string name="current_date">09/05/2018</string>
    <string name="current_day">Wednesday</string>
    <string name="current_city">Dhaka</string>
    <string name="weather_situation">Scattered Clouds</string>
    <string name="celsius_full">Celsius</string>
    <string name="fahrenheit_full">Fahrenheit</string>
    <string name="minimum">Min: 92C</string>
    <string name="maximum">Max: 93C</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="default_time">07:09:24 AM</string>
    <string name="humidity">Humidity</string>
    <string name="default_percent">86%</string>
    <string name="pressure">Pressure</string>
    <string name="default_pressure">1021.71 hPa</string>
    <string name="min_wc">Min</string>
    <string name="max_wc">Max</string>
    <string name="percent_sign">%</string>
    <string name="pressure_sign">hPa</string>
    <string name="search">Search</string>
    <string name="enter_city">Enter City Name</string>
    <string name="exit_dialogue">Are you sure to exit?</string>
    <string name="can_not_download">Could not download data</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="could_not_get_city">Could not found the city. Last city is shown.</string>
    <string name="could_not_connect">Could not connect to the internet.</string>
    <string name="loading_dot">Loading...</string>
    <string name="blank" />
    <string name="can_not_download_weather">Could not download weather data</string>
    <string name="could_not_download_forecast">Could not download forecast data</string>
    <string name="failed_to_download_forecast">Failed to download forecast data</string>
    <string name="failed_to_download_weather">Failed to download weather data</string>
    <string name="title_activity_maps">Maps</string>
    <string name="turn_on_location">Location not found. Please turn location on and try again</string>
    <string name="note_c">Note:</string>
    <string name="calculating">Calculating...</string>
    <string name="choose_location">Choose location</string>
    <string name="profile">Profile</string>

</resources>
