<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DrawerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/char_spacing">

            <ImageView
                android:layout_width="@dimen/logo_img_size"
                android:layout_height="@dimen/logo_img_size"
                android:layout_marginBottom="@dimen/medium_spacing"
                android:contentDescription="@string/app_name"
                android:src="@drawable/travel_logo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_spacing"
                android:text="@string/app_name"
                android:textColor="@color/header_color"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_spacing"
                android:text="@string/login"
                android:textColor="@color/header_color"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/loginEmailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/normal_spacing"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />

            <EditText
                android:id="@+id/loginPassEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />

            <TextView
                android:id="@+id/loginStatusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_wait"
                android:textColor="@color/waiting_color"
                android:textSize="@dimen/default_text_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/loginErrorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textColor="@color/error_color"
                android:textSize="@dimen/default_text_size"
                android:visibility="gone" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/char_spacing"
                android:layout_marginBottom="@dimen/normal_spacing"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered"
                    android:textSize="@dimen/large_text_size" />

                <Button
                    android:id="@+id/regBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/char_spacing"
                    android:paddingStart="@dimen/normal_spacing"
                    android:text="@string/sign_up"
                   android:textAllCaps="false"
                    android:textSize="@dimen/large_spacing" />
            </LinearLayout>
    </ScrollView>

</FrameLayout>